# invoke-bedrock-agents

./: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  quickstart.sh  setup.py
.github/workflows/: ci.yml
scripts/: lint.sh  test.sh
src/: __init__.py  bedrock_agent_client.py  chat_app.py  chat_history_logger.py
tests/: test_bedrock_agent_client.py  test_chat_app.py  test_chat_history_logger.py  test_integration.py
